When you can't swim, you drown! Fixed the issue of not limiting save, limiting view source and opening inspect with the shortcut (f12, ctrl+shift+i), implementing automatic detection of the user's device language and redirecting to the appropriate page for their language.

--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -18,7 +18,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  transition: var(--trans-2x);
+  transition: background-color var(--trans-2x), color var(--trans-2x);
+  will-change: background-color, color;
 }
 
 // Reset margin, padding and inherit box-sizing for all elements
